# autonomous-coder

./: Makefile  README.md  pyproject.toml
src/auto_coder/: __init__.py  agent.py  executor.py  models.py
tests/: test_agent.py  test_executor.py  test_models.py
